yml/samplepod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: chaos-testing
  name: pod-failure-example
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
