yml/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-rules
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: stereproject.in
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: conexp-frontend-svc
              port:
                number: 80
